--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=posto-combustivel
+spring.datasource.url=jdbc:h2:file:./data/posto_combustivel_db
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=fglanna
+spring.datasource.password=lanna
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
